--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/main.css">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/popup.css">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/loader.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/login.css">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>Data Dashboard</title>
